--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="" width="140px">
+            <img id="logo1" src="logo.png" alt="">
         </div>
         <div class="textos">
             <p>Combos</p>
@@ -31,10 +31,10 @@
     </header>
     <main>
         <div class="roxo">
-            <img src="roxo.png" alt="roxo" width="700px">
+            <img id="roxo2" src="roxo.png" alt="roxo">
         </div>
         <div class="copos">
-            <img src="copos.png" alt="" width="600px">
+            <img id="copos1" src="copos.png" alt="">
 
         </div>
     </main>
