--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         </div>
         <div class="textos">
             <p>Combos</p>
-            <p>Monte seu Açaí</p>
+            <p>Monte seu  Açaí</p>
             <p>Promoções</p>
             <p>Sobre</p>
-            <p>Contatos</p>
-            <img src="botao.png" alt="" width="150px">
+            <p>Contato</p>
 
+        </div>
+
+        <div class="botao">
+            <img  id="botao1" src="botao.png" alt="">
         </div>
         <div class="linha">
         </div>
@@ -49,3 +52,4 @@
 </body>
 
 </html>
+
