--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
 <body>
     <header>
         <div class="logo">
-            <img id="logo1" src="logo.png" alt="">
+            <img src="logo.png" alt="" width="140px">
         </div>
         <div class="textos">
             <p>Combos</p>
-            <p>Monte seu  Açaí</p>
+            <p>Monte seu Açaí</p>
             <p>Promoções</p>
             <p>Sobre</p>
-            <p>Contato</p>
+            <p>Contatos</p>
+            <img src="botao.png" alt="" width="150px">
 
-        </div>
-
-        <div class="botao">
-            <img  id="botao1" src="botao.png" alt="">
         </div>
         <div class="linha">
         </div>
     </header>
     <main>
-        <div class="roxo">
-            <img id="roxo2" src="roxo.png" alt="roxo">
+        <!-- <div class="roxo">
+            <img id="roxo1" src="roxo.png" alt="roxo">
         </div>
         <div class="copos">
             <img id="copos1" src="copos.png" alt="">
 
+        </div> -->
+        <div class="roxo2">
+            <img src="./copos.png" alt="">
         </div>
     </main>
     <footer>
@@ -51,5 +51,6 @@
     </footer>
 </body>
 
-</html>
 
+
+</html>
